crates/test-files/fixtures/compile_errors/mislabeled_call_args_self.fe
contract Foo {
    pub fn baz(self) {
        self.bar(doesnt_exist: 1, me_neither: 2)
    }

    pub fn bar(self, val1: u256, val2: u256) {}
}
